@@ -4,6 +4,7 @@
 	* Retry a TCP connection once if it failed to connect on send.
 	* Remove useless conditional call to freeaddrinfo().
 	* Only implement gai_strerrorA if gai_strerror was not already defined.
+	* Make the TCP protocol retain session information for multiple connections.
 
 2008-12-23  Nicholas Humfrey  <njh@aelius.com>
 	* Added a function called lo_server_wait() which waits for a message to be received.
